config/participants/paynow/ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-paynow
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: default-rewrite
spec:
  rules:
    - host: paynow-backend.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: paynow-mojaloop-simulator
              servicePort: 3003
    - host: paynow-thirdparty-scheme-adapter-inbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: paynow-thirdparty-scheme-adapter
              servicePort: 4005
    - host: paynow-thirdparty-scheme-adapter-outbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: paynow-thirdparty-scheme-adapter
              servicePort: 4006
    - host: paynow-sdk-scheme-adapter-inbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: paynow-sdk-scheme-adapter
              servicePort: 4000
    - host: paynow-sdk-scheme-adapter-outbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: paynow-sdk-scheme-adapter
              servicePort: 4001
